<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.rascalmpl</groupId>
	<artifactId>flybytes</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<scm>
		<developerConnection>scm:git:ssh://git@github.com/cwi-swat/flybytes.git</developerConnection>
	</scm>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
					<exclude>**/*.class</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>.</directory>
				<filtering>false</filtering>
				<includes>
					<include>META-INF/RASCAL.MF</include>
					<include>src/**/*.rsc</include>
				</includes>
			</resource>
		</resources>
		<testSourceDirectory>src</testSourceDirectory>

                <plugins>
                    <plugin>
				<groupId>org.rascalmpl</groupId>
				<artifactId>rascal-maven-plugin</artifactId>
				<version>0.7.3</version>
				<configuration>
					<bin>${project.build.outputDirectory}</bin>
					<srcs>
						<src>${project.basedir}/src</src>
					</srcs>
				</configuration>
				<executions>
					<execution>
						<id>flybytes-compile</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
					<execution>
						<id>flybytes-package</id>
						<phase>pre-package</phase>
						<goals>
							<goal>package</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M3</version>
				<executions>
					<execution>
						<id>test</id>
						<phase>test</phase>
						<configuration>
							<argLine>
								-ea
								-Xmx2G
								-Xss128m
								-Dfile.encoding=UTF-8
							</argLine>
							<includes>
								<include>**/*Tests.java</include>
							</includes>
							<testSourceDirectory>${basedir}/src/</testSourceDirectory>
						</configuration>
						<goals>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>

			</plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-compiler-plugin</artifactId>
                            <version>3.8.0</version>
                            <configuration>
                                <compilerArgument>-parameters</compilerArgument> <!-- make sure parameters are compiled by name into the jar -->
                                <release>11</release>
                            </configuration>
                        </plugin>
                    </plugins>
	</build>

	

        <repositories>
            <repository>
                <id>usethesource</id>
                <url>https://releases.usethesource.io/maven/</url>
            </repository>
            <repository>
                <id>ow2</id>
                <url>https://repository.ow2.org/nexus</url>
            </repository>
        </repositories>
        <pluginRepositories>
            <pluginRepository>
                <id>usethesource</id>
                <url>https://releases.usethesource.io/maven/</url>
            </pluginRepository>
        </pluginRepositories>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
		</dependency>
                <dependency>
                    <groupId>org.rascalmpl</groupId>
                    <artifactId>rascal</artifactId>
                    <version>0.22.2</version>
                </dependency>
                <dependency>
                    <groupId>asm</groupId>
                    <artifactId>asm-analysis</artifactId>
                    <version>3.3.1</version>
                </dependency>
                <dependency>
                    <groupId>asm</groupId>
                    <artifactId>asm-tree</artifactId>
                    <version>3.3.1</version>
                </dependency>
                <dependency>
                    <groupId>asm</groupId>
                    <artifactId>asm-commons</artifactId>
                    <version>3.3.1</version>
                </dependency>
                <dependency>
                    <groupId>asm</groupId>
                    <artifactId>asm</artifactId>
                    <version>3.3.1</version>
                </dependency>
	</dependencies>
</project>
